Regression: Crash if in one node editor create node group but in other one delete this node #104233

Closed
opened 2023-01-30 13:57:47 +01:00 by Iliya Katushenock · 11 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56

Blender Version
Broken: version: 3.5.0 Alpha, branch: arcpatch-D16262, commit date: 2022-12-04 20:33, hash: 4565b649d6
Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-24 17:05, hash: 412642865d

Caused by 90ea1b7643

Short description of error
Blender crash without stack if in one node editor create node group but in other one delete this node

2023-01-30 15-51-22.mp4

Exact steps for others to reproduce the error

  1. Split geometry node editor on 2 editors.
  2. In one editor create some node and apply on this operator for new node group {key ctrl g}).
  3. On other one node editor you will see new node group. Try to delete this.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 527.56 **Blender Version** Broken: version: 3.5.0 Alpha, branch: arcpatch-[D16262](https://archive.blender.org/developer/D16262), commit date: 2022-12-04 20:33, hash: `4565b649d6` Worked: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-24 17:05, hash: `412642865d` Caused by 90ea1b7643 **Short description of error** Blender crash without stack if in one node editor create node group but in other one delete this node [2023-01-30 15-51-22.mp4](https://archive.blender.org/developer/F14213654/2023-01-30_15-51-22.mp4) **Exact steps for others to reproduce the error** 1. Split geometry node editor on 2 editors. 2. In one editor create some node and apply on this operator for new node group {key ctrl g}). 3. On other one node editor you will see new node group. Try to delete this.
Author
Member

Added subscriber: @mod_moder

Added subscriber: @mod_moder
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

I'll find commit cause

I'll find commit cause
Author
Member

I not so sure in direct patch, but problem is dereference null node in {https://developer.blender.org/diffusion/B/browse/master/source/blender/nodes/intern/geometry_nodes_log.cc$529}

I not so sure in direct patch, but problem is dereference null node in {https://developer.blender.org/diffusion/B/browse/master/source/blender/nodes/intern/geometry_nodes_log.cc$529}

Added subscriber: @Baardaap

Added subscriber: @Baardaap

This starts to behave weird in

90ea1b7643

Since this commit creating a group in the one editor leaves *both * the group and the original node in the other editor. Clicking on the original node then crashes blender.

Some (short-ish) time later this was 'fixed' with no double node occurring, but since then the crash of this report exists.

This starts to behave weird in 90ea1b7643 Since this commit creating a group in the one editor leaves *both * the group and the original node in the other editor. Clicking on the original node then crashes blender. Some (short-ish) time later this was 'fixed' with no double node occurring, but since then the crash of this report exists.
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member
CC @HooglyBoogly

Added subscriber: @Wovchick

Added subscriber: @Wovchick

This issue was referenced by a86f657692

This issue was referenced by a86f657692a157308e5f58a2eb4f82ab37d4f69b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2023-02-06 16:21:12 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104233
No description provided.