Fix T104233: crash when deleting a group node that is displayed by other editor

Differential Revision: https://developer.blender.org/D17172